# rust-fixed-capacity-vec

./: Cargo.toml  README.md
benches/: decode_rle.rs
src/: lib.rs
